k8s/10-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wisecow-svc
  namespace: wisecow
spec:
  selector:
    app: app
  ports:
    - name: http
      port: 4499
      targetPort: 4499
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: afroz25/wisecow:02a6a41
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4499
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          livenessProbe:
            tcpSocket:                  
              port: 4499
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            tcpSocket:                  
              port: 4499
            initialDelaySeconds: 5
            periodSeconds: 5
