k8s/50-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: wiscow-gatewayclass
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: wisecow-proxy
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: wisecow-gateway
  namespace: wisecow
spec:
  gatewayClassName: wiscow-gatewayclass
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: wisecow-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wisecow-redirect
  namespace: wisecow
spec:
  parentRefs:
    - name: wisecow-gateway
      sectionName: http
  hostnames:
    - ec2-54-213-236-180.us-west-2.compute.amazonaws.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wisecow-https
  namespace: wisecow
spec:
  parentRefs:
    - name: wisecow-gateway
      sectionName: https
  hostnames:
    - ec2-54-213-236-180.us-west-2.compute.amazonaws.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wisecow-svc
          port: 4499
